--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous" />
-  <link rel="stylesheet" href="styles.css" />
   <title>Weather Dashboard</title>
 </head>
 
@@ -16,47 +15,37 @@
     <h1>Weather Dashboard</h1>
   </header>
 
+  <!-- max-width for ultra wide resolutions -->
   <div class="container-fluid" style="max-width: 1400px">
     <div class="row">
-      <!-- Sidebar for City Search -->
-      <aside class="col-lg-3 pb-3 bg-light">
-        <h2 id="form-heading" class="mt-3 h4 text-dark">
+      <aside class="col-lg-3 pb-3">
+        <h2 id="form-heading" class="mt-1 h3 form-label">
           Search for a City:
         </h2>
         <form id="search-form" class="form">
-          <div class="form-group">
+          <div class="form-inline form-group">
             <div class="input-group">
-              <input class="form-control weather-search" type="text" id="search-input" placeholder="San Diego"
+              <input class="form-input weather-search" type="text" id="search-input" placeholder="San Diego"
                 aria-labelledby="form-heading" aria-controls="today forecast" />
               <div class="input-group-append">
-                <button type="submit" class="btn btn-primary" id="search-button" aria-label="submit search">
+                <button type="submit" class="btn search-button" id="search-button" aria-label="submit search">
                   Search
                 </button>
+                <hr class="hr weather-hr" />
               </div>
             </div>
           </div>
         </form>
-        <ul class="list-group mt-4" id="history">
-          <li class="list-group-item">Atlanta</li>
-          <li class="list-group-item">Denver</li>
-          <li class="list-group-item">Seattle</li>
-          <li class="list-group-item">San Francisco</li>
-          <li class="list-group-item">Orlando</li>
-          <li class="list-group-item">New York</li>
-          <li class="list-group-item">Chicago</li>
-          <li class="list-group-item">Austin</li>
-        </ul>
+        <div class="list-group row mt-2" id="history"></div>
       </aside>
 
-      <!-- Main Weather Display -->
       <div class="col-lg-9 pb-3">
-        <!-- Current Weather Section -->
         <section class="mt-3" role="region" aria-live="polite">
-          <div class="card bg-light">
+          <div class="card">
             <div class="card-body" id="today">
               <h2 class="card-title" id="search-title">
                 Search for a city!
-                <img id="weather-img" class="weather-img" />
+                <img id="weather-img" class="weather-img">
               </h2>
               <p class="card-text" id="temp">Temperature: °F</p>
               <p class="card-text" id="wind">Wind: MPH</p>
@@ -64,33 +53,7 @@
             </div>
           </div>
         </section>
-
-        <!-- 5-Day Forecast Section -->
-        <section id="forecast" class="mt-3">
-          <h3 class="text-dark">5-Day Forecast:</h3>
-          <div class="d-flex justify-content-between flex-wrap">
-            <!-- Example Forecast Cards -->
-            <div class="card text-white bg-primary forecast-card">
-              <div class="card-body text-center">
-                <h4 class="card-title">9/14/2022</h4>
-                <p>🌞</p>
-                <p>Temp: 63.55°F</p>
-                <p>Wind: 3.94 MPH</p>
-                <p>Humidity: 63%</p>
-              </div>
-            </div>
-            <div class="card text-white bg-primary forecast-card">
-              <div class="card-body text-center">
-                <h4 class="card-title">9/15/2022</h4>
-                <p>🌞</p>
-                <p>Temp: 66.52°F</p>
-                <p>Wind: 3.91 MPH</p>
-                <p>Humidity: 64%</p>
-              </div>
-            </div>
-            <!-- Repeat cards for additional days -->
-          </div>
-        </section>
+        <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
       </div>
     </div>
   </div>
